@@ -32,6 +32,8 @@ Version 0.0.4b (in progress)
 * [Removed] Use of unreliable $_SERVER['HTTP_REFERER'] for email notifications links.
 * [Added] Note regarding current season awards to awards page.
 * [Improved] Install error message to make it more specific and informative.
+* [Fixed] Handle teams with mulitple owners.
+* [Fixed] Broken stats reset functionality for team names.
 
 Version 0.0.3b (01/16/2023)
 * [Added] Team rosters to team page.
